directory_listing/build.txt
[36mvite v8.0.3 [32mbuilding client environment for production...[36m[39m
[2Ktransforming...✓ 20 modules transformed.
[31m✗[39m Build failed in 308ms
[31merror during build:
[31mBuild failed with 1 error:

[plugin vite:css-post]
SyntaxError: [lightningcss minify] Invalid empty selector
69 |  }
70 |  
71 |  .3d-card {
   |  ^
72 |    transition: transform 0.1s ease-out;
73 |    transform-style: preserve-3d;
    at Module.<anonymous> (D:\directory-listing\my-stellar-app\node_modules\lightningcss\node\index.js:56:14)
    at minifyCSS (file:///D:/directory-listing/my-stellar-app/node_modules/vite/dist/node/chunks/node.js:21202:59)
    at async finalizeCss (file:///D:/directory-listing/my-stellar-app/node_modules/vite/dist/node/chunks/node.js:21048:36)
    at async Promise.all (index 1)
    at async Object.run (file:///D:/directory-listing/my-stellar-app/node_modules/vite/dist/node/chunks/node.js:2436:22)
    at async PluginContextImpl.renderChunk (file:///D:/directory-listing/my-stellar-app/node_modules/vite/dist/node/chunks/node.js:20587:19)
    at async plugin (file:///D:/directory-listing/my-stellar-app/node_modules/rolldown/dist/shared/bindingify-input-options-e7ze4hPR.mjs:1234:16)
    at async plugin.<computed> (file:///D:/directory-listing/my-stellar-app/node_modules/rolldown/dist/shared/bindingify-input-options-e7ze4hPR.mjs:1593:12)[31m
    at aggregateBindingErrorsIntoJsError (file:///D:/directory-listing/my-stellar-app/node_modules/rolldown/dist/shared/error-BLhcSyeg.mjs:48:18)
    at unwrapBindingResult (file:///D:/directory-listing/my-stellar-app/node_modules/rolldown/dist/shared/error-BLhcSyeg.mjs:18:128)
    at #build (file:///D:/directory-listing/my-stellar-app/node_modules/rolldown/dist/shared/rolldown-build-CPrIX9V6.mjs:3313:34)
    at async buildEnvironment (file:///D:/directory-listing/my-stellar-app/node_modules/vite/dist/node/chunks/node.js:32849:64)
    at async Object.build (file:///D:/directory-listing/my-stellar-app/node_modules/vite/dist/node/chunks/node.js:33271:19)
    at async Object.buildApp (file:///D:/directory-listing/my-stellar-app/node_modules/vite/dist/node/chunks/node.js:33268:153)
    at async CAC.<anonymous> (file:///D:/directory-listing/my-stellar-app/node_modules/vite/dist/node/cli.js:778:3) {
  errors: [Getter/Setter]
}[39m
